5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4080/executions/1578_1330.log
== TEST (2019-03-13 12:41:01) 
-- CODE:
round(41.66)
-- OUTPUT:
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:41:46) 
-- CODE:
round(41.66)
-- EXECUTION TIME:
0.147178
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:42:14) 
-- CODE:
print(round(41.66))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:42:21) 
-- CODE:
print(round(41.66))
-- EXECUTION TIME:
0.136252
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:44:42) 
-- CODE:
print(round(250/6,2)
-- ERROR:
File "XXXX", line 2
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:44:48) 
-- CODE:
print(round(250/6,2)
-- EXECUTION TIME:
0.14358
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    
                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:45:11) 
-- CODE:
print(round(250/6, 2)
-- EXECUTION TIME:
0.165162
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:45:49) 
-- CODE:
print(round(250/6,2))
-- EXECUTION TIME:
0.141174
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:25:13) 
-- CODE:
print(round(250/6,2))
-- EXECUTION TIME:
0.190056
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:42:57) 
-- CODE:
print(round(250/6,2))
-- EXECUTION TIME:
0.14821
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:50:27) 
-- CODE:
print(round(250/6,2))
-- EXECUTION TIME:
0.20984
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 14:02:48) 
-- CODE:
print(round(250/6,2))
-- EXECUTION TIME:
0.200853
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 14:02:59) 
-- CODE:
print(round(250/6,2))
-- EXECUTION TIME:
0.142468
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 15:14:22) 
-- CODE:
print(round(250/6,2))
-- EXECUTION TIME:
0.217727
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 13:04:58) 
-- CODE:
print(round(250/6,2))
-- EXECUTION TIME:
0.203172
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
